<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:layout_marginBottom="45dp"
        android:src="@drawable/new_logo"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:background="@drawable/transparent_white"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:textSize="28dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_mob"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:layout_above="@id/user_email_editbox"
            android:textSize="16dp"/>
 <EditText
     android:id="@+id/user_email_editbox"
        android:layout_width="match_parent"
        android:layout_height="45dp"
     android:inputType="phone"
     android:layout_centerInParent="true"
     android:hint="@string/farmermobileno"
     android:padding="4dp"
     android:textColorHint="@color/black"
     android:layout_marginLeft="20dp"
     android:layout_marginBottom="20dp"
     android:layout_marginRight="20dp"
     android:layout_marginTop="7dp"
     android:textStyle="bold"
     android:textSize="22dp"
     android:textColor="@color/black"
     android:maxLength="10"
     android:background="@drawable/white_line"
       />


<Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/user_email_editbox"
     android:textColor="@color/white"
    android:layout_marginTop="20dp"
    android:layout_centerInParent="true"
    android:text="@string/submit"
    android:background="@drawable/roundedbutton"
    android:onClick="sendot"
    />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>