<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFarmer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="12dp"
        android:gravity="center"
        android:background="@drawable/transparent_white"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/email"/>


            <TextView
                android:id="@+id/farmer_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:textColor="@color/black"
                android:paddingRight="5dp"
                android:inputType="textEmailAddress"
                android:hint="@string/farmeremailid" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/telephone"/>


            <TextView
                android:id="@+id/farmer_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:paddingRight="5dp"  android:singleLine="true"
                android:inputType="number"
                android:hint="@string/farmermobileno" />

        </RelativeLayout>
            <TextView
                android:id="@+id/aadhaar_no"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="20dp"
                android:background="@drawable/white_line"
                android:padding="4dp"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/black"
                android:inputType="number"
                android:hint="@string/adharno" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/farm_loc"/>

            <TextView
                android:id="@+id/farmer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="6dp"
                android:textSize="18dp"
                android:scrollbars="vertical"
                android:layout_marginLeft="30dp"
                android:hint="@string/farmeraddress" />

        </RelativeLayout>

    </LinearLayout>
    </ScrollView>
</FrameLayout>