<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/splash"
    tools:context=".activity.FarmerProfile">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#6A383535">
<!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_marginTop="-22dp"-->
    <!--android:layout_height="120dp"-->
    <!--android:scaleType="fitXY"-->
    <!--android:src="@drawable/new_logo"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="95dp"
                android:layout_height="94dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="3dp" />

<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/imgUpload"
    android:layout_width="90dp"
    android:layout_height="90dp"
    android:src="@drawable/profile"
    app:civ_border_color="@color/white"
    app:civ_border_width="3dp"
    />
                <RelativeLayout
                    android:id="@+id/imgGif"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:clickable="true"
                    android:elevation="20dp"
                    android:layout_centerInParent="true"
                    >
                    <pl.droidsonroids.gif.GifTextView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/gif2"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

    <ImageView
    android:layout_width="28dp"
    android:layout_height="28dp"
    android:src="@drawable/profile_pic"
        android:elevation="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />
            </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">
<TextView
    android:id="@+id/txtName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:layout_margin="2dp"
    />
<TextView
    android:id="@+id/txtCity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/white"
    android:textSize="13dp"
    />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnMessage"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/message"
                    android:layout_marginRight="10dp"
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    />
                <Button
                    android:id="@+id/btnCall"
                    android:layout_width="90dp"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_height="30dp"
                    android:background="@drawable/black_square"
                    android:text="@string/call"
                    />

            </LinearLayout>

        </LinearLayout>
        </LinearLayout>



    </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            app:tabSelectedTextColor="@color/white"
            android:layout_height="45dp"
            app:tabIndicatorColor="@color/white"
            android:background="@color/theme_color">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farmer_details" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />

        </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>

</RelativeLayout>